添加压力测试，编辑readme